# isi_music

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  format.yml  release.yml
patches/librespot-core/: Cargo.toml  build.rs
patches/librespot-core/src/: authentication.rs
scripts/: bump-version.sh
src/: app.rs  audio_sink.rs  config.rs  daemon.rs  discord.rs  keybinds.rs  lastfm.rs  main.rs  mpris.rs  theme.rs  wizard.rs
src/app/: handlers.rs  library.rs  metadata.rs  player.rs  ui.rs
src/audio/: audio_sink.rs  mod.rs
src/keybinds/: mod.rs  watcher.rs
src/player/: local.rs  mod.rs
src/spotify/: auth.rs  client.rs  mod.rs  token.rs
src/ui/: layout.rs  local_tree.rs  mod.rs  options.rs  playback.rs  render.rs  search.rs  state.rs
src/utils/: cache.rs  debug_overlay.rs  discord.rs  ipc.rs  lastfm.rs  lyrics.rs  mod.rs  mpris.rs  theme.rs  wizard.rs
tests/app/: handlers.rs  metadata.rs  mock_player.rs  player.rs  ui.rs
tests/keybinds/: mod.rs
tests/ui/: state.rs
tests/utils/: cache.rs  debug_overlay.rs  theme.rs
